--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
